--- a/web/resources/css/main.css
+++ b/web/resources/css/main.css
@@ -1,7 +1,7 @@
-#gridContainer, #personDiv{
-    height: 100%;
-    width: 100%;
-}
+/*#home,#gridContainer, #personDiv{*/
+    /*height: 100%;*/
+    /*width: 100%;*/
+/*}*/
 .gridx{
     height: 320px !important;
 }
@@ -10,8 +10,10 @@
 }
 
 html, body {
+    width: 100%;
     height: 100%;
     margin: 0;
     overflow: hidden;
     padding: 0;
 }
+
