--- a/web/ui/templates/WelcomWidget.html
+++ b/web/ui/templates/WelcomWidget.html
@@ -6,7 +6,7 @@
          style="width: 15%">
         <div data-dojo-attach-point="navigation"></div>
     </div>
-    <div data-dojo-type="dijit/layout/TabContainer" data-dojo-props="region:'center', tabStrip:true" id="TabContainer">
+    <div data-dojo-type="dijit/layout/TabContainer" data-dojo-props="region:'center', tabStrip:true" data-dojo-attach-point="tabContainer">
         <div data-dojo-type="dijit/layout/ContentPane" title="Welcom" id="WelcomPane">
             <div id='gridContainer'></div>
         </div>
