--- a/web/ui/templates/WelcomWidget.html
+++ b/web/ui/templates/WelcomWidget.html
@@ -4,7 +4,7 @@
     <div data-dojo-type="dijit/layout/ContentPane"
          data-dojo-props="region:'left', splitter: true"
          style="width: 15%">
-        <div data-dojo-attach-point="navigation"></div>
+        <div data-dojo-attach-point="navigation" style="height: 100%"></div>
     </div>
     <div data-dojo-type="dijit/layout/TabContainer" data-dojo-props="region:'center', tabStrip:true" data-dojo-attach-point="tabContainer">
         <div data-dojo-type="dijit/layout/ContentPane" title="Welcom" id="WelcomPane">
