--- a/web/ui/templates/WelcomWidget.html
+++ b/web/ui/templates/WelcomWidget.html
@@ -7,8 +7,8 @@
         <div data-dojo-attach-point="navigation" style="height: 100%"></div>
     </div>
     <div data-dojo-type="dijit/layout/TabContainer" data-dojo-props="region:'center', tabStrip:true" data-dojo-attach-point="tabContainer">
-        <div data-dojo-type="dijit/layout/ContentPane" title="Welcom" id="WelcomPane">
-            <div id='gridContainer'></div>
+        <div data-dojo-type="dijit/layout/ContentPane" title="Welcom" data-dojo-attach-point="welcomPane">
+            <div data-dojo-attach-point='gridContainer'></div>
         </div>
     </div>
 </div>
