--- a/web/ui/templates/WelcomWidget.html
+++ b/web/ui/templates/WelcomWidget.html
@@ -8,7 +8,7 @@
     </div>
     <div data-dojo-type="dijit/layout/TabContainer" data-dojo-props="region:'center', tabStrip:true" data-dojo-attach-point="tabContainer">
         <div data-dojo-type="dijit/layout/ContentPane" title="Welcom" data-dojo-attach-point="welcomPane">
-            <div data-dojo-attach-point='gridContainer'></div>
+            <div data-dojo-attach-point='welcomGrid'></div>
         </div>
     </div>
 </div>
