--- a/web/ui/templates/Outgoing.html
+++ b/web/ui/templates/Outgoing.html
@@ -79,11 +79,7 @@
                                name="date"
                                required="true"
                                data-dojo-type="dijit/form/DateTextBox"
-                               data-dojo-props="value: at(this.model, 'date').transform({
-                    parse: function(value){
-                     return new Date(Date.UTC(value.getFullYear(), value.getMonth(), value.getDate()));
-                    }
-                  })"/>
+                               data-dojo-props="value: at(this.model, 'date')"/>
                     </td>
                 </tr>
                 <tr>
