--- a/web/ui/templates/Person.html
+++ b/web/ui/templates/Person.html
@@ -88,11 +88,7 @@
                                        name="birthday"
                                        required="true"
                                        data-dojo-type="dijit/form/DateTextBox"
-                                       data-dojo-props="value: at(this.model, 'birthday').transform({
-                    parse: function(value){
-                     return new Date(Date.UTC(value.getFullYear(), value.getMonth(), value.getDate()));
-                    }
-                  })"/>
+                                       data-dojo-props="value: at(this.model, 'birthday')"/>
                             </td>
                         </tr>
                         <tr>
