--- a/web/ui/templates/Incoming.html
+++ b/web/ui/templates/Incoming.html
@@ -6,129 +6,75 @@
         <div data-dojo-type="dijit/form/Form"
              data-dojo-attach-point="form"
              data-dojo-props="region:'right'"
-             encType="multipart/form-data" action="/ecm/rest/employees" method="post"
              style="border: 0px; width: 100%">
-            <table style="border: 1px solid #9f9f9f; width: 100%" cellspacing="10">
-                <tr>
-                    <td>
-                        <label>ID:</label>
-                    </td>
-                    <td>
-                         <span data-dojo-type="dojox/mvc/Output"
-                               data-dojo-attach-point="entityId"
-                               data-dojo-props="value: at(this.model, 'id')"></span>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <label>Name:</label>
-                    </td>
-                    <td>
-                        <input type="text"
-                               name="name"
-                               required="true"
-                               data-dojo-type="dijit/form/ValidationTextBox"
-                               data-dojo-props="value: at(this.model, 'name')">
-                    </td>
-                </tr>
-                <div data-dojo-type="dojo/store/JsonRest"
-                     data-dojo-props="target:'http://localhost:8080/ecm/rest/employees/', idProperty:'id'"
-                     data-dojo-id="personStore"></div>
-                <tr>
-                    <td>
-                        <label>Author:</label>
-                    </td>
-                    <td>
-                        <select required="true"
-                                name="authorId"
-                                data-dojo-type="dijit/form/FilteringSelect"
-                                data-dojo-props="value: at(this.model, 'authorId'), store: personStore, labelAttr: 'fullname', searchAttr: 'fullname'"
-                                data-dojo-attach-point="author"> </select>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <label>Sender:</label>
-                    </td>
-                    <td>
-                        <select required="true"
-                                name="senderId"
-                                data-dojo-type="dijit/form/FilteringSelect"
-                                data-dojo-props="value: at(this.model, 'senderId'), store: personStore, labelAttr: 'fullname', searchAttr: 'fullname'"
-                                data-dojo-attach-point="sender"> </select>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <label>Recipient:</label>
-                    </td>
-                    <td>
-                        <select required="true"
-                                name="recipientId"
-                                data-dojo-type="dijit/form/FilteringSelect"
-                                data-dojo-props="value: at(this.model, 'recipientId'), store: personStore, labelAttr: 'fullname', searchAttr: 'fullname'"
-                                data-dojo-attach-point="recipient"> </select>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <label>Reg number:</label>
-                    </td>
-                    <td>
-                        <input type="text"
-                               name="regNumber"
-                               required="true"
-                               data-dojo-type="dijit/form/ValidationTextBox"
-                               data-dojo-props="value: at(this.model, 'regNumber')">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <label>Date:</label>
-                    </td>
-                    <td>
-                        <input type="date"
-                               name="date"
-                               required="true"
-                               data-dojo-type="dijit/form/DateTextBox"
-                               data-dojo-props="value: at(this.model, 'date')"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <label>Reference number:</label>
-                    </td>
-                    <td>
-                        <input type="text"
-                               name="referenceNumber"
-                               required="true"
-                               data-dojo-type="dijit/form/ValidationTextBox"
-                               data-dojo-props="value: at(this.model, 'referenceNumber')">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <label>Outbound reg date:</label>
-                    </td>
-                    <td>
-                        <input type="text"
-                               name="outboundRegDate"
-                               required="true"
-                               data-dojo-type="dijit/form/DateTextBox"
-                               data-dojo-props="value: at(this.model, 'outboundRegDate')">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <label>Text:</label>
-                    </td>
-                    <td>
-                        <div data-dojo-type="dijit/Editor" name="text" data-dojo-props="value: at(this.model, 'text')">
-                        </div>
-                    </td>
-                </tr>
-            </table>
+            <div data-dojo-type="dojox/layout/TableContainer" data-dojo-props="cols:1">
 
+                <div title="ID:"
+                     data-dojo-type="dojox/mvc/Output"
+                     data-dojo-attach-point="entityId"
+                     data-dojo-props="value: at(this.model, 'id')"></div>
+
+                <div title="Name:"
+                     type="text"
+                     name="name"
+                     required="true"
+                     data-dojo-type="dijit/form/ValidationTextBox"
+                     data-dojo-props="value: at(this.model, 'name')"></div>
+
+                <div title="Author:"
+                     required="true"
+                     name="authorId"
+                     data-dojo-type="dijit/form/FilteringSelect"
+                     data-dojo-props="value: at(this.model, 'authorId'), labelAttr: 'fullname', searchAttr: 'fullname'"
+                     data-dojo-attach-point="author"></div>
+
+                <div title="Sender:"
+                     required="true"
+                     name="senderId"
+                     data-dojo-type="dijit/form/FilteringSelect"
+                     data-dojo-props="value: at(this.model, 'senderId'), labelAttr: 'fullname', searchAttr: 'fullname'"
+                     data-dojo-attach-point="sender"></div>
+
+                <div title="Recipient:"
+                     required="true"
+                     name="recipientId"
+                     data-dojo-type="dijit/form/FilteringSelect"
+                     data-dojo-props="value: at(this.model, 'recipientId'), labelAttr: 'fullname', searchAttr: 'fullname'"
+                     data-dojo-attach-point="recipient"></div>
+
+                <div title="Reg number:"
+                     type="text"
+                     name="regNumber"
+                     required="true"
+                     data-dojo-type="dijit/form/ValidationTextBox"
+                     data-dojo-props="value: at(this.model, 'regNumber')"></div>
+
+                <div title="Date:"
+                     type="date"
+                     name="date"
+                     required="true"
+                     data-dojo-type="dijit/form/DateTextBox"
+                     data-dojo-props="value: at(this.model, 'date')"></div>
+
+                <div title="Reference number:"
+                     type="text"
+                     name="referenceNumber"
+                     required="true"
+                     data-dojo-type="dijit/form/ValidationTextBox"
+                     data-dojo-props="value: at(this.model, 'referenceNumber')"></div>
+
+                <div title="Outbound reg date:"
+                     type="text"
+                     name="outboundRegDate"
+                     required="true"
+                     data-dojo-type="dijit/form/DateTextBox"
+                     data-dojo-props="value: at(this.model, 'outboundRegDate')"></div>
+            </div>
+
+            <div title="Text:"
+                 data-dojo-type="dijit/Editor"
+                 name="text"
+                 data-dojo-props="value: at(this.model, 'text')"></div>
 
             <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'center'">
             </div>
