--- a/web/ui/templates/Person.html
+++ b/web/ui/templates/Person.html
@@ -33,7 +33,8 @@
 
                     <div data-dojo-type="dojox/layout/TableContainer" data-dojo-props="cols:1">
 
-                        <div title="ID:" data-dojo-type="dojox/mvc/Output" data-dojo-attach-point="entityId" data-dojo-props="value: at(this.model, 'id')"></div>
+                        <div title="ID:" data-dojo-type="dojox/mvc/Output" data-dojo-attach-point="entityId"
+                             data-dojo-props="value: at(this.model, 'id')"></div>
 
                         <div title="First name:"
                              type="text"
@@ -79,7 +80,6 @@
                      data-dojo-attach-point="filelist"></div>
                 <div data-dojo-type="dijit/form/Button" data-dojo-attach-point="button"></div>
             </div>
-
         </div>
     </div>
 </div>
