--- a/web/ui/templates/NavigationWidget.html
+++ b/web/ui/templates/NavigationWidget.html
@@ -1,5 +1,6 @@
 <div style="width: 100%; height:100%;">
-    <div data-dojo-type="dijit/layout/AccordionContainer" data-dojo-props="region:'leading'" style="width: 100%; height:100%;">
+    <div data-dojo-type="dijit/layout/AccordionContainer" data-dojo-props="region:'leading'"
+         style="width: 100%; height:100%;">
         <div data-dojo-type="dijit/layout/AccordionPane" title="Staff">
             <div data-dojo-attach-point="employees"></div>
         </div>
